--- a/index.html
+++ b/index.html
@@ -37,11 +37,14 @@
     </header>
         <main>
       <section class="first-screen">
+        <div class="container">
         <h1 class="title">Effective Solutions
         for Your Business</h1>
-        <button class="title-button " type="button">Order Service</button>
+        <button class="title-button  " type="button">Order Service</button>
       </section>
+      </div>
       <section>
+        <div class="container">
         <h2  hidden>/</h2>
         <ul>
             <li>
@@ -69,8 +72,10 @@
                       passion for problem-solving.</p>
                     </li>
                     </ul>
+                    </div>
       </section>
       <section class="team-description">
+        <div class="container">
         <h2 class="page-title" >Our Team</h2>
         <ul class="team-list">
             <li class="team-item"><img src="./images/img-3.jpg" alt="Mark Guerrero" width="264">
@@ -86,8 +91,10 @@
             <h3 class="title-description">Daniel Wilson</h3>
         <p  class="description-item">UI Designer</p></li>
         </ul>
+        </div>
       </section>
       <section>
+        <div class="container">
         <h2 class="page-title">Our Portfolio</h2>
 <ul>
        <li> <img src="./images/img-5.jpg" alt="banking app" width="360">
@@ -114,14 +121,17 @@
           <h3 class="title-description">Online Courses</h3>
           <p class="description-item">Marketing</p></li>
           </ul>
+          </div>
       </section>
 
     </main>
     <footer class="page-footer">
+      <div class="container">
         <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
       <p class="description-footer">Increase the flow of customers and 
         sales for your business with digital
          marketing & growth solutions.</p>
+        </div>
     </footer>
 </body>
 </html>
