--- a/index.html
+++ b/index.html
@@ -43,29 +43,29 @@
         <button class="title-button  " type="button">Order Service</button>
       </section>
       </div>
-      <section>
+      <section class="second-screen">
         <div class="container">
         <h2  hidden>/</h2>
-        <ul>
-            <li>
+        <ul class="title-list">
+            <li class="item-description">
           <h3 class="title-description" >Strategy</h3>
           <p class="description-item">Our goal is to identify the business
         problem to walk away with the perfect and creative solution.</p>
     </li>
    
-               <li>
+               <li class="item-description">
                     <h3  class="title-description" >Punctuality</h3>
                     <p class="description-item">Bring the key message to the
                         brand's audience for the best price
                         within the shortest possible time.</p>
                         </li>   
-               <li>
+               <li class="item-description">
                     <h3 class="title-description">Diligence</h3>
                     <p class="description-item">Research and confirm brands that
                         present the strongest digital growth
                         opportunities and minimize risk.</p>
                         </li> 
-                <li>
+                <li class="item-description">
                 <h3 class="title-description">Technologies</h3>
                 <p  class="description-item">Design practice focused on digital
                      experiences. We bring forth a deep
