added murkup to fourth section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="container">
         <h2 class="page-title" >Our Team</h2>
         <ul class="team-list">
-            <li class="team-item"><img src="./images/img-3.jpg" alt="Mark Guerrero" width="264">
+            <li class="team-item"><img  src="./images/img-3.jpg" alt="Mark Guerrero" width="264">
             <h3 class="title-description">Mark Guerrero</h3>
         <p class="description-item">Product Designer</p></li>
             <li class="team-item"><img src="./images/img-2.jpg" alt="Tom Ford" width="264">
@@ -93,33 +93,33 @@
         </ul>
         </div>
       </section>
-      <section>
+      <section class="portfolio">
         <div class="container">
-        <h2 class="page-title">Our Portfolio</h2>
-<ul>
-       <li> <img src="./images/img-5.jpg" alt="banking app" width="360">
-        <h3 class="title-description">Banking App</h3>
-        <p class="description-item">App</p></li>
+        <h2 class="page-title ">Our Portfolio</h2>
+<ul class="portfolio-list">
+       <li class="portfolio-item"> <img src="./images/img-5.jpg" alt="banking app" width="360">
+        <h3 class="title-description portfolio-title">Banking App</h3>
+        <p class="description-item description-portfolio">App</p></li>
 
-    <li><img src="./images/img-4.jpg" alt="cashless payment" width="360">
-      <h3 class="title-description">Cashless Payment</h3>
-          <p class="description-item">Marketing</p></li>
+    <li class="portfolio-item"><img src="./images/img-4.jpg" alt="cashless payment" width="360">
+      <h3 class="title-description portfolio-title ">Cashless Payment</h3>
+          <p class="description-item description-portfolio">Marketing</p></li>
 
-          <li><img src="./images/img-03.jpg" alt="meditation app" width="360">
-            <h3 class="title-description">Meditation App</h3>
-          <p class="description-item">App</p></li>
+          <li class="portfolio-item"><img src="./images/img-03.jpg" alt="meditation app" width="360">
+            <h3 class="title-description portfolio-title">Meditation App</h3>
+          <p class="description-item description-portfolio">App</p></li>
 
-          <li><img src="./images/img-02.jpg" alt="taxi service" width="360">
-            <h3 class="title-description">Taxi Service</h3>
-          <p class="description-item">Marketing</p></li>
+          <li class="portfolio-item"><img src="./images/img-02.jpg" alt="taxi service" width="360">
+            <h3 class="title-description portfolio-title">Taxi Service</h3>
+          <p class="description-item description-portfolio">Marketing</p></li>
 
-          <li><img src="./images/img-01.jpg" alt="screen illustrations" width="360">
-            <h3 class="title-description">Screen Illustrations</h3>
-          <p class="description-item">Design</p></li>
+          <li class="portfolio-item"><img src="./images/img-01.jpg" alt="screen illustrations" width="360">
+            <h3 class="title-description portfolio-title">Screen Illustrations</h3>
+          <p class="description-item description-portfolio">Design</p></li>
 
-          <li><img src="./images/img-0.jpg" alt="online courses" width="360">
-          <h3 class="title-description">Online Courses</h3>
-          <p class="description-item">Marketing</p></li>
+          <li class="portfolio-item"><img src="./images/img-0.jpg" alt="online courses" width="360">
+          <h3 class="title-description portfolio-title">Online Courses</h3>
+          <p class="description-item description-portfolio">Marketing</p></li>
           </ul>
           </div>
       </section>
