--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
       <section class="second-screen">
         <div class="container">
-        <h2  hidden>/</h2>
+        <h2 class="visually-hidden">/</h2>
         <ul class="title-list">
             <li class="item-description">
           <h3 class="title-description" >Strategy</h3>
@@ -78,48 +78,49 @@
         <div class="container">
         <h2 class="page-title" >Our Team</h2>
         <ul class="team-list">
-            <li class="team-item"><img  src="./images/img-3.jpg" alt="Mark Guerrero" width="264">
+         
+            <li class="team-item"><div class="item-team"><img  src="./images/img-3.jpg" alt="Mark Guerrero" width="264">
             <h3 class="title-description">Mark Guerrero</h3>
-        <p class="description-item">Product Designer</p></li>
-            <li class="team-item"><img src="./images/img-2.jpg" alt="Tom Ford" width="264">
+        <p class="description-item">Product Designer</p></div></li>
+             <li class="team-item"><div class="item-team"><img src="./images/img-2.jpg" alt="Tom Ford" width="264">
             <h3 class="title-description">Tom Ford</h3>
-        <p class="description-item">Frontend Developer</p></li>
-            <li class="team-item"><img src="./images/img-1.jpg" alt="Camila Garcia" width="264">
+        <p class="description-item">Frontend Developer</p></div></li>
+             <li class="team-item"><div class="item-team"><img src="./images/img-1.jpg" alt="Camila Garcia" width="264">
             <h3 class="title-description">Camila Garcia</h3>
-        <p class="description-item">Marketing</p></li>
-            <li class="team-item"><img src="./images/img.jpg" alt="Daniel Wilson" width="264">
+        <p class="description-item">Marketing</p></div></li>
+             <li class="team-item"><div class="item-team"><img src="./images/img.jpg" alt="Daniel Wilson" width="264">
             <h3 class="title-description">Daniel Wilson</h3>
-        <p  class="description-item">UI Designer</p></li>
+        <p  class="description-item">UI Designer</p></div></li>
         </ul>
-        </div>
+        </div> 
       </section>
       <section class="portfolio">
         <div class="container">
         <h2 class="page-title ">Our Portfolio</h2>
 <ul class="portfolio-list">
-       <li class="portfolio-item"> <img src="./images/img-5.jpg" alt="banking app" width="360">
+       <li class="portfolio-item"> <div><img src="./images/img-5.jpg" alt="banking app" width="360">
         <h3 class="title-description portfolio-title">Banking App</h3>
-        <p class="description-item description-portfolio">App</p></li>
+        <p class="description-item description-portfolio">App</p></div></li>
 
-    <li class="portfolio-item"><img src="./images/img-4.jpg" alt="cashless payment" width="360">
+    <li class="portfolio-item"> <div class="item-portfolio-icon"><img src="./images/img-4.jpg" alt="cashless payment" width="360">
       <h3 class="title-description portfolio-title ">Cashless Payment</h3>
-          <p class="description-item description-portfolio">Marketing</p></li>
+          <p class="description-item description-portfolio">Marketing</p></div></li>
 
-          <li class="portfolio-item"><img src="./images/img-03.jpg" alt="meditation app" width="360">
+          <li class="portfolio-item"> <div class="item-portfolio-icon"><img src="./images/img-03.jpg" alt="meditation app" width="360">
             <h3 class="title-description portfolio-title">Meditation App</h3>
-          <p class="description-item description-portfolio">App</p></li>
+          <p class="description-item description-portfolio">App</p></div></li>
 
-          <li class="portfolio-item"><img src="./images/img-02.jpg" alt="taxi service" width="360">
+          <li class="portfolio-item"> <div class="item-portfolio-icon"><img src="./images/img-02.jpg" alt="taxi service" width="360">
             <h3 class="title-description portfolio-title">Taxi Service</h3>
-          <p class="description-item description-portfolio">Marketing</p></li>
+          <p class="description-item description-portfolio">Marketing</p></div></li>
 
-          <li class="portfolio-item"><img src="./images/img-01.jpg" alt="screen illustrations" width="360">
+          <li class="portfolio-item"> <div class="item-portfolio-icon"><img src="./images/img-01.jpg" alt="screen illustrations" width="360">
             <h3 class="title-description portfolio-title">Screen Illustrations</h3>
-          <p class="description-item description-portfolio">Design</p></li>
+          <p class="description-item description-portfolio">Design</p></div></li>
 
-          <li class="portfolio-item"><img src="./images/img-0.jpg" alt="online courses" width="360">
+          <li class="portfolio-item"> <div class="item-portfolio-icon"><img src="./images/img-0.jpg" alt="online courses" width="360">
           <h3 class="title-description portfolio-title">Online Courses</h3>
-          <p class="description-item description-portfolio">Marketing</p></li>
+          <p class="description-item description-portfolio">Marketing</p></div></li>
           </ul>
           </div>
       </section>
