--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         <h1 class="title">Effective Solutions
         for Your Business</h1>
         <button class="title-button  " type="button">Order Service</button>
+        </div>
       </section>
-      </div>
+      
       <section class="second-screen">
         <div class="container">
         <h2 class="visually-hidden">/</h2>
@@ -75,52 +76,52 @@
                     </div>
       </section>
       <section class="team-description">
-        <div class="container">
+        <div class="container item-team">
         <h2 class="page-title" >Our Team</h2>
         <ul class="team-list">
          
-           <div class="item-team"><li class="team-item"><img  src="./images/img-3.jpg" alt="Mark Guerrero" width="264">
+          <li class="team-item"><img  src="./images/img-3.jpg" alt="Mark Guerrero" width="264">
             <h3 class="title-description">Mark Guerrero</h3>
-        <p class="description-item">Product Designer</p></li></div>
-            <div class="item-team"><li class="team-item"><img src="./images/img-2.jpg" alt="Tom Ford" width="264">
+        <p class="description-item">Product Designer</p></li>
+          <li class="team-item"><img src="./images/img-2.jpg" alt="Tom Ford" width="264">
             <h3 class="title-description">Tom Ford</h3>
-        <p class="description-item">Frontend Developer</p></li></div>
-             <div class="item-team"><li class="team-item"><img src="./images/img-1.jpg" alt="Camila Garcia" width="264">
+        <p class="description-item">Frontend Developer</p></li>
+            <li class="team-item"><img src="./images/img-1.jpg" alt="Camila Garcia" width="264">
             <h3 class="title-description">Camila Garcia</h3>
-        <p class="description-item">Marketing</p></li></div>
-            <div class="item-team"> <li class="team-item"><img src="./images/img.jpg" alt="Daniel Wilson" width="264">
+        <p class="description-item">Marketing</p></li>
+            <li class="team-item"><img src="./images/img.jpg" alt="Daniel Wilson" width="264">
             <h3 class="title-description">Daniel Wilson</h3>
-        <p  class="description-item">UI Designer</p></li></div>
+        <p  class="description-item">UI Designer</p></li>
         </ul>
         </div> 
       </section>
       <section class="portfolio">
-        <div class="container">
+        <div class="container item-portfolio-icon">
         <h2 class="page-title ">Our Portfolio</h2>
 <ul class="portfolio-list">
-       <div class="item-portfolio-icon"> <li class="portfolio-item"> <img src="./images/img-5.jpg" alt="banking app" width="360">
+       <li class="portfolio-item"> <img src="./images/img-5.jpg" alt="banking app" width="360">
         <h3 class="title-description portfolio-title">Banking App</h3>
-        <p class="description-item description-portfolio">App</p></li></div>
+        <p class="description-item description-portfolio">App</p></li>
 
-     <div class="item-portfolio-icon"><li class="portfolio-item"> <img src="./images/img-4.jpg" alt="cashless payment" width="360">
+    <li class="portfolio-item"> <img src="./images/img-4.jpg" alt="cashless payment" width="360">
       <h3 class="title-description portfolio-title ">Cashless Payment</h3>
-          <p class="description-item description-portfolio">Marketing</p></div></li></div>
+          <p class="description-item description-portfolio">Marketing</p></div></li>
 
-           <div class="item-portfolio-icon"><li class="portfolio-item"> <img src="./images/img-03.jpg" alt="meditation app" width="360">
+          <li class="portfolio-item"> <img src="./images/img-03.jpg" alt="meditation app" width="360">
             <h3 class="title-description portfolio-title">Meditation App</h3>
-          <p class="description-item description-portfolio">App</p></li></div>
+          <p class="description-item description-portfolio">App</p></li>
 
-           <div class="item-portfolio-icon"><li class="portfolio-item"> <img src="./images/img-02.jpg" alt="taxi service" width="360">
+          <li class="portfolio-item"> <img src="./images/img-02.jpg" alt="taxi service" width="360">
             <h3 class="title-description portfolio-title">Taxi Service</h3>
-          <p class="description-item description-portfolio">Marketing</p></li></div>
+          <p class="description-item description-portfolio">Marketing</p></li>
 
-           <div class="item-portfolio-icon"><li class="portfolio-item"> <img src="./images/img-01.jpg" alt="screen illustrations" width="360">
+          <li class="portfolio-item"> <img src="./images/img-01.jpg" alt="screen illustrations" width="360">
             <h3 class="title-description portfolio-title">Screen Illustrations</h3>
-          <p class="description-item description-portfolio">Design</p></li></div>
+          <p class="description-item description-portfolio">Design</p></li>
 
-          <div class="item-portfolio-icon"> <li class="portfolio-item"> <img src="./images/img-0.jpg" alt="online courses" width="360">
+          <li class="portfolio-item"> <img src="./images/img-0.jpg" alt="online courses" width="360">
           <h3 class="title-description portfolio-title">Online Courses</h3>
-          <p class="description-item description-portfolio">Marketing</p></li></div>
+          <p class="description-item description-portfolio">Marketing</p></li>
           </ul>
           </div>
       </section>
