--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </section>
       
       <section class="second-screen">
-        <div class="container">
+        <div class="container second-screen-container">
         <h2 class="visually-hidden">/</h2>
         <ul class="title-list">
             <li class="item-description">
@@ -76,52 +76,52 @@
                     </div>
       </section>
       <section class="team-description">
-        <div class="container item-team">
+        <div class="container team-description-container  ">
         <h2 class="page-title" >Our Team</h2>
         <ul class="team-list">
          
           <li class="team-item"><img  src="./images/img-3.jpg" alt="Mark Guerrero" width="264">
-            <h3 class="title-description">Mark Guerrero</h3>
-        <p class="description-item">Product Designer</p></li>
+           <div class="item-team"><h3 class="title-description">Mark Guerrero</h3>
+        <p class="description-item">Product Designer</p></div></li>
           <li class="team-item"><img src="./images/img-2.jpg" alt="Tom Ford" width="264">
-            <h3 class="title-description">Tom Ford</h3>
-        <p class="description-item">Frontend Developer</p></li>
+           <div class="item-team"> <h3 class="title-description">Tom Ford</h3>
+        <p class="description-item">Frontend Developer</p></div></li>
             <li class="team-item"><img src="./images/img-1.jpg" alt="Camila Garcia" width="264">
-            <h3 class="title-description">Camila Garcia</h3>
-        <p class="description-item">Marketing</p></li>
+           <div class="item-team"> <h3 class="title-description">Camila Garcia</h3>
+        <p class="description-item">Marketing</p></div></li>
             <li class="team-item"><img src="./images/img.jpg" alt="Daniel Wilson" width="264">
-            <h3 class="title-description">Daniel Wilson</h3>
-        <p  class="description-item">UI Designer</p></li>
+           <div class="item-team"> <h3 class="title-description">Daniel Wilson</h3>
+        <p  class="description-item">UI Designer</p></div></li>
         </ul>
         </div> 
       </section>
-      <section class="portfolio">
-        <div class="container item-portfolio-icon">
+      <section class="">
+        <div class="container portfolio">
         <h2 class="page-title ">Our Portfolio</h2>
 <ul class="portfolio-list">
-       <li class="portfolio-item"> <img src="./images/img-5.jpg" alt="banking app" width="360">
-        <h3 class="title-description portfolio-title">Banking App</h3>
-        <p class="description-item description-portfolio">App</p></li>
+       <li class="portfolio-item"> <img class="portfolio-img" src="./images/img-5.jpg" alt="banking app" width="360">
+       <div class="item-portfolio-icon"> <h3 class="title-description portfolio-title">Banking App</h3>
+        <p class="description-item description-portfolio">App</p></div></li>
 
-    <li class="portfolio-item"> <img src="./images/img-4.jpg" alt="cashless payment" width="360">
-      <h3 class="title-description portfolio-title ">Cashless Payment</h3>
+    <li class="portfolio-item"> <img class="portfolio-img" src="./images/img-4.jpg" alt="cashless payment" width="360">
+      <div class="item-portfolio-icon"><h3 class="title-description portfolio-title ">Cashless Payment</h3>
           <p class="description-item description-portfolio">Marketing</p></div></li>
 
-          <li class="portfolio-item"> <img src="./images/img-03.jpg" alt="meditation app" width="360">
-            <h3 class="title-description portfolio-title">Meditation App</h3>
-          <p class="description-item description-portfolio">App</p></li>
+          <li class="portfolio-item"> <img class="portfolio-img" src="./images/img-03.jpg" alt="meditation app" width="360">
+           <div class="item-portfolio-icon"> <h3 class="title-description portfolio-title">Meditation App</h3>
+          <p class="description-item description-portfolio">App</p></div></li>
 
-          <li class="portfolio-item"> <img src="./images/img-02.jpg" alt="taxi service" width="360">
-            <h3 class="title-description portfolio-title">Taxi Service</h3>
-          <p class="description-item description-portfolio">Marketing</p></li>
+          <li class="portfolio-item"> <img class="portfolio-img" src="./images/img-02.jpg" alt="taxi service" width="360">
+       <div class="item-portfolio-icon"> <h3 class="title-description portfolio-title">Taxi Service</h3>
+          <p class="description-item description-portfolio">Marketing</p></div></li>
 
-          <li class="portfolio-item"> <img src="./images/img-01.jpg" alt="screen illustrations" width="360">
-            <h3 class="title-description portfolio-title">Screen Illustrations</h3>
-          <p class="description-item description-portfolio">Design</p></li>
+          <li class="portfolio-item"> <img class="portfolio-img" src="./images/img-01.jpg" alt="screen illustrations" width="360">
+           <div class="item-portfolio-icon"><h3 class="title-description portfolio-title">Screen Illustrations</h3>
+          <p class="description-item description-portfolio">Design</p></div></li>
 
-          <li class="portfolio-item"> <img src="./images/img-0.jpg" alt="online courses" width="360">
-          <h3 class="title-description portfolio-title">Online Courses</h3>
-          <p class="description-item description-portfolio">Marketing</p></li>
+          <li class="portfolio-item"> <img class="portfolio-img" src="./images/img-0.jpg" alt="online courses" width="360">
+         <div class="item-portfolio-icon"> <h3 class="title-description portfolio-title">Online Courses</h3>
+          <p class="description-item description-portfolio">Marketing</p></div></li>
           </ul>
           </div>
       </section>
