--- a/index.html
+++ b/index.html
@@ -49,25 +49,25 @@
         <h2 class="visually-hidden">/</h2>
         <ul class="title-list">
             <li class="item-description">
-          <h3 class="title-description" >Strategy</h3>
+          <h3 class="title-description second-title" >Strategy</h3>
           <p class="description-item">Our goal is to identify the business
         problem to walk away with the perfect and creative solution.</p>
     </li>
    
                <li class="item-description">
-                    <h3  class="title-description" >Punctuality</h3>
+                    <h3  class="title-description second-title" >Punctuality</h3>
                     <p class="description-item">Bring the key message to the
                         brand's audience for the best price
                         within the shortest possible time.</p>
                         </li>   
                <li class="item-description">
-                    <h3 class="title-description">Diligence</h3>
+                    <h3 class="title-description second-title">Diligence</h3>
                     <p class="description-item">Research and confirm brands that
                         present the strongest digital growth
                         opportunities and minimize risk.</p>
                         </li> 
                 <li class="item-description">
-                <h3 class="title-description">Technologies</h3>
+                <h3 class="title-description second-title">Technologies</h3>
                 <p  class="description-item">Design practice focused on digital
                      experiences. We bring forth a deep
                       passion for problem-solving.</p>
@@ -95,8 +95,8 @@
         </ul>
         </div> 
       </section>
-      <section class="">
-        <div class="container portfolio">
+      <section class="portfolio">
+        <div class="container container-portfolio">
         <h2 class="page-title ">Our Portfolio</h2>
 <ul class="portfolio-list">
        <li class="portfolio-item"> <img class="portfolio-img" src="./images/img-5.jpg" alt="banking app" width="360">
