sunday changes two

--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
          
           <li class="team-item"><img  src="./images/img-3.jpg" alt="Mark Guerrero" width="264">
            <div class="item-team"><h3 class="title-description">Mark Guerrero</h3>
-        <p class="description-item">Product Designer</p></div></li>
+        <p class="description-item iteem-tem-description">Product Designer</p></div></li>
           <li class="team-item"><img src="./images/img-2.jpg" alt="Tom Ford" width="264">
            <div class="item-team"> <h3 class="title-description">Tom Ford</h3>
-        <p class="description-item">Frontend Developer</p></div></li>
+        <p class="description-item iteem-tem-description">Frontend Developer</p></div></li>
             <li class="team-item"><img src="./images/img-1.jpg" alt="Camila Garcia" width="264">
            <div class="item-team"> <h3 class="title-description">Camila Garcia</h3>
-        <p class="description-item">Marketing</p></div></li>
+        <p class="description-item iteem-tem-description">Marketing</p></div></li>
             <li class="team-item"><img src="./images/img.jpg" alt="Daniel Wilson" width="264">
            <div class="item-team"> <h3 class="title-description">Daniel Wilson</h3>
-        <p  class="description-item">UI Designer</p></div></li>
+        <p  class="description-item iteem-tem-description">UI Designer</p></div></li>
         </ul>
         </div> 
       </section>
